frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: frontend
        version: v1 
#       annotations: 
#         date: "+%H:%M:%S %d/%m/%y"
    spec:     # pod spec
      imagePullSecrets:
      - name: jfrog-secret
      containers: 
      - name: frontend
        #image: frontend-docker:latest # image we pushed
        #image: neethusnair/frontend-docker:latest # image we pushed
        image: sreyo.jfrog.io/ns-docker-dev-local/frontend-docker # image we pushed
        
        #imagePullPolicy: Never
        imagePullPolicy: Always
        ports:
        - containerPort: 1337
        readinessProbe:
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 11
          exec:
           command:
             - cat
             - /api/cart

           
        #   httpGet:
        #     # scheme: HTTPS
        #     # path: /
        #     httpHeaders:
        #     - name: Host
        #       value: awsdevmanagedorg.sreyo.in
        #     port: 80
        #   initialDelaySeconds: 300
        #   periodSeconds: 10
        #   failureThreshold: 15
        #   timeoutSeconds: 11
        
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend 
  ports:
    # - port: 8081
    #   targetPort: 80
    - port: 1337
      targetPort: 1337
