frontend_lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: frontend 
    spec:     # pod spec
      imagePullSecrets:
       - name: jfrog-secret 
      containers: 
      - name: frontend
        image: sreyo.jfrog.io/ns-docker-dev-local/frontend-docker
        imagePullPolicy: Always
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
      nodePort: 30000
